# matmul

./: Cargo.toml  Kernels.md  Readme.md  build.rs  softmax.ipynb
asm/: fma_sss.s
examples/: basic.rs
proptest-regressions/: kernel.txt
src/: driver.rs  gemm.rs  kernel.rs  lib.rs
