[package]
name = "test_attn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
bitflags = "2.3.3"
half = "2.3.1"
ndarray = "0.15.6"
num = "0.4.0"

[build-dependencies]
anyhow = "1.0.71"
cc = "1.0.79"
minijinja = "1.0.3"

[dev-dependencies]
proptest = "1.2.0"
proptest-derive = "0.3.0"
